    the SPDX License ID in the 'license' package manifest value.

  * New source layout customization mechanisms in bdep-new. In particular, the
    split include/src layout is now supported out of the box:

    $ bdep new -l c++ -t lib,split libhello

    See the SOURCE LAYOUT section in bdep-new(1) for details and a large
    number of layout examples.

  * The bdep-new command now generates the .gitattributes file.

  * The bdep-new --subdirectory mode option has been renamed to --source.

  * The bdep-new binless sub-option has been moved from --lang|-l to --type|t.

Version 0.12.0

  * Support for creating new projects with existing files.

    The bdep-new command now also recognizes and handles the following
    existing filesystem entries in the project root:

      .git      -- assume VCS is already initialized and is Git
      LICENSE   -- try to guess the manifest license from contents
      README.md -- try to extract the manifest summary line from contents

    Overall, the idea is to streamline the workflow where one creates a
    project on one of the hosting services (GitHub, GitLab, etc) and then
    initializes it with bdep-new.

    Also, to this effect, specifying the project name is now optional and if
    omitted, the current working directory (or --output-dir, if specified) is
    assumed to be the project name.

    An example of this streamlined workflow:

    $ # create project with LICENSE and README.md on a Git hosting service
    $ git clone .../libhello.git
    $ cd libhello
    $ bdep new -t lib

    Finally, with this change it now makes sense to have support for pre-
    creation hooks (--pre-hook) in addition to post-creation (--post-hook).

  * Support for default options files (aka tool config files).

    See the bdep-default-options-files(1) help topic for background and the
    DEFAULT OPTIONS FILES section in each command's man pages for specifics.

  * New bdep-new no-install project type sub-option.
